# nt-minimal-template

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.bat  cargo-generate.toml
.cursor/rules/: build-via-build-bat.mdc  karpathy-guidelines.mdc
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
client/: Cargo.toml
client/src/: main.rs
driver/: Cargo.toml  build.rs  {{crate_name}}_driver.inx
driver/src/: lib.rs
shared-contract/: Cargo.toml
shared-contract/src/: lib.rs
